packages/generators/typebox-generator/test/@fixtures/app/src/test/api/errors/number/index.ts
import { defineRoute } from "@test/index";

export default defineRoute(({ POST }) => [
  POST<{
    json: {
      // Minimum/Maximum
      minimum: TRefine<number, { minimum: 0 }>;
      maximum: TRefine<number, { maximum: 100 }>;
      minMax: TRefine<number, { minimum: 10; maximum: 90 }>;

      // Exclusive bounds
      exclusiveMinimum: TRefine<number, { exclusiveMinimum: 0 }>;
      exclusiveMaximum: TRefine<number, { exclusiveMaximum: 100 }>;
      exclusiveRange: TRefine<
        number,
        { exclusiveMinimum: 0; exclusiveMaximum: 100 }
      >;

      // Multiple of
      multipleOf5: TRefine<number, { multipleOf: 5 }>;
      multipleOfDecimal: TRefine<number, { multipleOf: 0.25 }>;

      // Combined constraints
      positiveMultiple: TRefine<number, { minimum: 0; multipleOf: 10 }>;
      negativeOnly: TRefine<number, { maximum: 0 }>;
    };
  }>(async () => {}),
]);
